Other fix related to sonarqube